--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -66,6 +66,7 @@ jobs:
         go run make.go -v UpdateDependentTools
         go run make.go -v Linux
         go run make.go -v LinuxArm64
+        go run make.go -v Linux386
         go run make.go -v Windows
         go run make.go -v Windowsx86
         go run make.go -v DarwinBase
